--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Valentine's Challenge Week 💘</title>
+    <title>Valentine's Greeting Card 💘</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,6 +15,33 @@
   </head>
 
   <body>
+    <div class="container">
+      <div class="card" id="card">
+        <p id="greeting-display">Greeting will go here</p>
+      </div>
+
+      <form id="form">
+        <label for="recipient-input">To:</label>
+        <input type="text" id="recipient-input" name="recipient-input" />
+        <br />
+        <label for="greeting-select">Select greeting:</label>
+        <select id="greeting-select">
+          <option value="">--Select greeting--</option>
+          <option value="I choo choo choose you! 🚂">
+            "I choo choo choose you! 🚂"
+          </option>
+          <option value="You are my sunshine! 🌞">
+            "You are my sunshine! 🌞"
+          </option>
+          <option value="Happy Valentine's! 💘">
+            "Happy Valentine's! 💘",
+          </option>
+        </select>
+        <br />
+        <label for="sender-input">From:</label>
+        <input type="text" id="sender-input" name="sender-input" />
+      </form>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
